# dexrs

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
benches/: edit.rs  parse.rs
examples/: dex_basic_ops.rs  dex_edit.rs  dex_strings.rs  parse_dex_file.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: class_accessor.rs  code_item.rs  encoded_item.rs  from_raw_parts.rs  instructions.rs  mutf8.rs
python/dexrs/: __init__.py  builder.py  code.py  container.py  editor.py  error.py  file.py  leb128.py  mutf8.py  primitive.py  type_lookup_table.py
python/dexrs/_internal/: __init__.pyi  annotation.pyi  builder.pyi  class_accessor.pyi  container.pyi  editor.pyi  error.pyi  file.pyi  leb128.pyi  mutf8.pyi  primitive.pyi  structs.pyi  type_lookup_table.pyi
python/dexrs/_internal/code/: __init__.pyi  code_flags.pyi  flags.pyi  signatures.pyi  verify_flags.pyi  vreg.pyi
python/tests/: _util.py  conftest.py  test_builder.py  test_dex_editor.py  test_dex_items.py  test_dex_parse.py  test_mutf8.py
src/: desc_names.rs  error.rs  leb128.rs  lib.rs  main.rs  primitive.rs  py.rs  utf.rs
src/dalvik/: error.rs  insns.rs  mod.rs
src/dalvik/dex/: debug_info.rs  dtype.rs  encoded_value.rs  header.rs  items.rs  map_list.rs  mod.rs  types.rs
src/dalvik/file/: annotation.rs  class_def.rs  debug.rs  field.rs  lazy_file.rs  method.rs  mod.rs  value.rs
src/file/: annotations.rs  builder.rs  class_accessor.rs  code_item_accessors.rs  compact_dex.rs  container.rs  debug.rs  dex_file.rs  dump.rs  editor.rs  header.rs  instruction.rs  ir.rs  mod.rs  modifiers.rs  patch.rs  signature.rs  structs.rs  type_lookup_table.rs  verifier.rs  writer.rs
src/py/: builder.rs  class_accessor.rs  code_item.rs  container.rs  editor.rs  error.rs  file.rs  leb128.rs  mod.rs  mutf8.rs  primitive.rs  structs.rs  type_lookup_table.rs  utf.rs
src/smali/: io.rs
src/vdex/: mod.rs
tests/: makedex
tests/fibonacci/: fib.dex  fib.java
tests/prime/: prime.dex  prime.java
