[package]
name = "dexrs"
version = "0.1.0"
edition = "2021"

[dependencies]
adler32 = "1.2.0"
memmap2 = "0.9.5"
openssl = "0.10.64"
plain = "0.2.3"
thiserror = "2.0.11"
varint-simd = "0.4.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false