[package]
name = "dexrs"
version = "1.0.0"
edition = "2021"

[dependencies]
adler32 = "1.2.0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
crossterm = "0.28"
ratatui = { version = "0.29", optional = true }
leb128fmt = "0.1.0"
memmap2 = "0.9.5"
plain = "0.2.3"
pyo3 = { version = "0.23.4", optional = true, features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.11"
varint-simd = "0.4.1"

[features]
default = []
python = ["pyo3"]
vdex = []
tui = ["ratatui"]

[lib]
name = "dexrs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dexrs"
path = "src/bin/dexrs/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "edit"
harness = false
