[package]
name = "dexrs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
plain = "0.2.3"

[dependencies.dexrs]
path = ".."

[[bin]]
name = "from_raw_parts"
path = "fuzz_targets/from_raw_parts.rs"
test = false
doc = false
bench = false

[[bin]]
name = "class_accessor"
path = "fuzz_targets/class_accessor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "instructions"
path = "fuzz_targets/instructions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encoded_item"
path = "fuzz_targets/encoded_item.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mutf8"
path = "fuzz_targets/mutf8.rs"
test = false
doc = false
bench = false
